HelloUltraviolet/Fixtures/RejectedSource/FFI/ExternGenericSignature/Expected.uv
//! Expected diagnostic metadata for the ExternGenericSignature rejected-source specimen.

expectedDiagnostic("E-TYP-2306", "diagnostics.23.ExternProcedureDiagnostics")
